enabled video bg to homepage, sticky - started homepage layout in css

--- a/index.html
+++ b/index.html
@@ -7,21 +7,31 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/normalize-fwd.css">
     <script src="scripts/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200;300;400;600;700;800;900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <a href="#"><img src="#" alt="logo"></a>
+
+    <main>
         <nav>
+            <a href="index.html"><h1>Shinjuku</h1></a>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">History</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Attractions</a></li>
                 <li><a href="#">Lifestyle</a></li>
                 <li><a href="#">Credits</a></li>
             </ul>
         </nav>
-    </header>
 
-    <main>
+    <div class="video-background">
+        <video autoplay muted loop id="background-video">
+        <source src="media/japanVideo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+        </video>
+    </div>
     </main>
 
     <footer>
