--- a/credits.html
+++ b/credits.html
@@ -6,6 +6,21 @@
     <title>Credits</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/normalize-fwd.css">
+
+    <link
+    rel="icon"
+    type="image/png"
+    href="media/favicon/favicon-48x48.png"
+    sizes="48x48"
+  />
+  <link rel="icon" type="image/svg+xml" href="media/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="media/favicon/favicon.ico" />
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="media/favicon/apple-touch-icon.png"
+  />
+  <link rel="manifest" href="media/favicon/site.webmanifest" />
 </head>
 <body>
     <header>
