--- a/index.html
+++ b/index.html
@@ -1,41 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shinjuku, Tokyo</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/normalize-fwd.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SHINJUKU</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/normalize-fwd.css" />
     <script src="scripts/script.js" defer></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200;300;400;600;700;800;900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-</head>
 
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      href="media/favicon/favicon-48x48.png"
+      sizes="48x48"
+    />
+    <link rel="icon" type="image/svg+xml" href="media/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="media/favicon/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="media/favicon/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="media/favicon/site.webmanifest" />
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <a href="index.html" class="main-title"><h1>Shinjuku</h1></a>
+        <ul class="nav-buttons">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="attractions.html">Attractions</a></li>
+          <li><a href="lifestyle.html">Lifestyle</a></li>
+          <li><a href="credits.html">Credits</a></li>
+        </ul>
+      </nav>
+
+      <button
+        class="menu"
+        onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
+        aria-label="Main Menu"
+      >
+        <svg width="100" height="100" viewBox="0 0 100 100">
+          <path
+            class="line line1"
+            d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"
+          />
+          <path class="line line2" d="M 20,50 H 80" />
+          <path
+            class="line line3"
+            d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"
+          />
+        </svg>
+      </button>
+    </header>
 
     <main>
-        <nav>
-            <a href="index.html"><h1>Shinjuku</h1></a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Attractions</a></li>
-                <li><a href="#">Lifestyle</a></li>
-                <li><a href="#">Credits</a></li>
-            </ul>
-        </nav>
-
-    <div class="video-background">
+      <div class="video-background">
         <video autoplay muted loop id="background-video">
-        <source src="media/japanVideo.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+          <source src="media/japanVideo.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
         </video>
-    </div>
+      </div>
+
+      <div class="home-content">
+        <h2>Shinjuku City, A Ward of Tokyo, Japan</h2>
+        <p>
+          Shinjuku, officially called Shinjuku City, is a special ward of Tokyo,
+          Japan. It is a major commercial and administrative center, housing the
+          northern half of the busiest railway station in the world (Shinjuku
+          Station) as well as the Tokyo Metropolitan Government Building, the
+          administrative center of the Tokyo Metropolitan Government. As of
+          2018, the ward has an estimated population of 346,235 and a population
+          density of 18,232 people per km2. The total area is 18.23 km2. Since
+          the end of World War II, Shinjuku has become a major secondary center
+          of Tokyo (fukutoshin), rivaling the original city center in
+          Marunouchi.
+        </p>
+      </div>
     </main>
 
     <footer>
+    <p> &copy; 2024 <a href="https://laust.ca/">Leibrandt Austria.</a> All Rights Reserved.</p>
     </footer>
-
-</body>
+  </body>
 </html>
