--- a/index.html
+++ b/index.html
@@ -27,22 +27,21 @@
   <body>
     <header>
       <nav>
-        <a href="index.html" class="main-title"><h1>Shinjuku</h1></a>
-        <ul class="nav-buttons">
+        <a href="index.html" class="main-title"><img src="media/country-logo.png" alt="country-logo"></a>
+        <ul id="nav-buttons">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="attractions.html">Attractions</a></li>
           <li><a href="lifestyle.html">Lifestyle</a></li>
           <li><a href="credits.html">Credits</a></li>
         </ul>
-      </nav>
 
-      <button
-        class="menu"
+        <button
+        id="hamMenu"
         onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
         aria-label="Main Menu"
       >
-        <svg width="100" height="100" viewBox="0 0 100 100">
+        <svg class="hamburger" width="75" height="75" viewBox="0 0 100 100">
           <path
             class="line line1"
             d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"
@@ -53,7 +52,10 @@
             d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"
           />
         </svg>
-      </button>
+      </button>  
+      </nav>
+
+      
     </header>
 
     <main>
