stickied header, content and grid applied to about.html, split css files

--- a/credits.html
+++ b/credits.html
@@ -65,7 +65,18 @@
                 </tr>
             </tbody>
         </table>
-            <
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="subscribe-form">
+            <h2>Enter To Win A Trip To Japan!</h2>
+            <form action="#" method="post">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <button type="submit">Enter</button>
+            </form>
+          </div>
 
     </main>
     <footer></footer>
