--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SHINJUKU</title>
+    <meta name="description" content="Learn about Shinjuku City, a vibrant ward of Tokyo, Japan, known for its bustling atmosphere and rich culture." />
+    <title>SHINJUKU | Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/normalize-fwd.css" />
     <script src="scripts/script.js" defer></script>
 
@@ -30,12 +31,12 @@
   <body>
     <header>
       <nav>
-        <a href="index.html" class="main-title"><img src="media/country-logo.png" alt="country-logo"></a>
+        <a href="index.html" class="main-title"><img src="media/logo-icon.svg" alt="country-logo"></a>
         <ul id="nav-buttons">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="attractions.html">Attractions</a></li>
-          <li><a href="lifestyle.html">Lifestyle</a></li>
+          <li><a href="food.html">Food</a></li>
           <li><a href="credits.html">Credits</a></li>
         </ul>
 
@@ -83,23 +84,12 @@
           of Tokyo (fukutoshin), rivaling the original city center in
           Marunouchi.
         </p>
-        <br>
-        <br>
-        <br>
-        <br>
-      <div class="subscribe-form">
-        <h2>Enter To Win A Trip To Japan!</h2>
-        <form action="#" method="post">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <button type="submit">Enter</button>
-        </form>
-      </div>
+
     </div>
     </main>
 
     <footer>
-    <p> &copy; 2024 <a href="https://laust.ca/">Leibrandt Austria.</a> All Rights Reserved.</p>
+    <p> &copy; 2024 <a class="footer-link" href="https://laust.ca/">Leibrandt Austria. </a> For Educational Purposes</p>
     </footer>
   </body>
 </html>
