--- a/about.html
+++ b/about.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ABOUT</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about Shinjuku City, a vibrant ward of Tokyo, Japan, known for its bustling atmosphere and rich culture.">
+    <title>SHINJUKU | About</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/normalize-fwd.css" />
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/about.css">
+    <link rel="stylesheet" href="styles/normalize-fwd.css">
     <script src="scripts/script.js" defer></script>
 
     <link
@@ -30,12 +32,12 @@
   <body>
     <header>
       <nav>
-        <a href="index.html" class="main-title"><img src="media/country-logo.png" alt="country-logo"></a>
+        <a href="index.html" class="main-title"><img src="media/logo-icon.svg" alt="country-logo"></a>
         <ul id="nav-buttons">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="attractions.html">Attractions</a></li>
-          <li><a href="lifestyle.html">Lifestyle</a></li>
+          <li><a href="food.html">Food</a></li>
           <li><a href="credits.html">Credits</a></li>
         </ul>
 
@@ -69,37 +71,50 @@
         </video>
       </div>
 
-      <div class="home-content">
-        <h2>Shinjuku City, A Ward of Tokyo, Japan</h2>
-        <p>
-          Shinjuku, officially called Shinjuku City, is a special ward of Tokyo,
-          Japan. It is a major commercial and administrative center, housing the
-          northern half of the busiest railway station in the world (Shinjuku
-          Station) as well as the Tokyo Metropolitan Government Building, the
-          administrative center of the Tokyo Metropolitan Government. As of
-          2018, the ward has an estimated population of 346,235 and a population
-          density of 18,232 people per km2. The total area is 18.23 km2. Since
-          the end of World War II, Shinjuku has become a major secondary center
-          of Tokyo (fukutoshin), rivaling the original city center in
-          Marunouchi.
+      <div class="about-content">
+        <img id="shinHistory" src="media/shinjuku-history.jpeg" alt="shinjuku history">
+        <div class="history">
+          <h2>History</h2>
+          <p>
+          In 1634, during the Edo period, as the outer moat of the Edo Castle
+          was built, a number of temples and shrines moved to the Yotsuya area
+          on the western edge of Shinjuku. In 1698, Naitō-Shinjuku had developed
+          as a new (shin) station (shuku or juku) on the Kōshū Kaidō, one of the
+          major highways of that era. Naitō was the family name of a daimyō
+          whose mansion stood in the area; his land is now a public park, the
+          Shinjuku Gyoen. In 1898, the Yodobashi Water Purification Plant, the
+          city's first modern water treatment facility, was built in the area
+          that is now between the park and the train station
         </p>
-        <br>
-        <br>
-        <br>
-        <br>
-      <div class="subscribe-form">
-        <h2>Enter To Win A Trip To Japan!</h2>
-        <form action="#" method="post">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <button type="submit">Enter</button>
-        </form>
-      </div>
-    </div>
+        </div>  
+        <img id="shinGeo" src="media/shinjuku-geo.jpg" alt="shinjuku geography">
+        <div class="geography">
+          <h2>Geography</h2>
+          <p>
+            Shinjuku is surrounded by Chiyoda to the east; Bunkyo and Toshima to
+            the north; Nakano to the west, and Shibuya and Minato to the south.
+            Shinjuku Gyo-en National Garden and NTT DoCoMo Yoyogi Building The
+            current city of Shinjuku grew out of several separate towns and
+            villages, which have retained some distinctions despite growing
+            together as part of the Tokyo metropolis.
+          </p>
+        </div>
+        <img id="shinTransport" src="media/shinjuku-transport.jpg" alt="shinjuku transport">
+        <div class="transport">
+          <h2>Transportation</h2>
+          <p>
+            Shinjuku is a major urban transit hub. Shinjuku Station sees an
+            estimated 3.64 million passengers pass through each day, making it the
+            busiest station in the world. It houses interchanges to three subway
+            lines and three privately owned commuter lines, as well as several JR
+            lines.
+          </p>
+        </div>
+  </div>
     </main>
 
     <footer>
-    <p> &copy; 2024 <a href="https://laust.ca/">Leibrandt Austria.</a> All Rights Reserved.</p>
+    <p> &copy; 2024 <a class="footer-link" href="https://laust.ca/">Leibrandt Austria. </a> For Educational Purposes</p>
     </footer>
   </body>
 </html>
