--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about Shinjuku City, a vibrant ward of Tokyo, Japan, known for its bustling atmosphere and rich culture.">
+    <meta name="description" content="Learn more about the History, Geography and Transportation in Shinjuku City">
     <title>SHINJUKU | About</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,9 +58,7 @@
           />
         </svg>
       </button>  
-      </nav>
-
-      
+      </nav> 
     </header>
 
     <main>
