added all media to Attractions & Food pages

--- a/attractions.html
+++ b/attractions.html
@@ -68,6 +68,15 @@
           Your browser does not support the video tag.
         </video>
       </div>
+      <h2></h2>
+      <h3>Shinjuku Gyoen National Garden</h3>
+      <img src="media/gyoen.jpg" alt="Gyoen National Garden">
+      <h3>Kabukicho</h3>
+      <img src="media/kabukicho.jpg" alt="Kabukicho">
+      <h3>Robot Restaurant</h3>
+      <img src="media/robot.jpeg" alt="Robot Restaurant">
+      <h3>Golden Gai</h3>
+      <img src="media/goldengai.jpg" alt="Golden Gai">
     </main>
 
     <footer>
