prelim sorting of foods page, added quote background

--- a/attractions.html
+++ b/attractions.html
@@ -78,8 +78,6 @@
         </video>
       </div>
 
-      <h2>Attractions</h2>
-
       <div class="attractions-content">
         <a href="#" class="popup-btn" data-popup="popup1"
           ><h3>Gyoen National Garden</h3>
@@ -119,7 +117,7 @@
             see cherry blossoms.
           </p>
           <a href="https://maps.app.goo.gl/5VvX47734gPGeQUw8" target="_blank"
-            >--Directions--</a
+            >[Directions]</a
           >
         </div>
       </div>
@@ -135,7 +133,7 @@
             definitely interesting to say the least.
           </p>
           <a href="https://maps.app.goo.gl/dXcAmF6BiSiieXpF6" target="_blank"
-            >--Directions--</a
+            >[Directions]</a
           >
         </div>
       </div>
@@ -154,7 +152,7 @@
             long and includes one intermission.
           </p>
           <a href="https://maps.app.goo.gl/1HegRQNwAfFdejrg9" target="_blank"
-            >--Directions--</a
+            >[Directions]</a
           >
         </div>
       </div>
@@ -170,7 +168,7 @@
             of Shinjuku.
           </p>
           <a href="https://maps.app.goo.gl/kWb5Vaj6NUE19ety9" target="_blank"
-            >--Directions--</a
+            >[Directions]</a
           >
         </div>
       </div>
