--- a/food.html
+++ b/food.html
@@ -69,23 +69,58 @@
           Your browser does not support the video tag.
         </video>
       </div>
-      <h2>Food</h2>
-      <blockquote cite="https://explorepartsunknown.com/tokyo/bourdains-field-notes-tokyo/"><p>I love Tokyo. If I had to eat only in one city for the rest of my life, Tokyo would be it. Most chefs I know would agree with me.</p></blockquote>
+    <div class="quote" style="background-image: url('media/bourdain.jpeg'); background-size: cover; background-position: center; color: white; padding: 20px;">
+      <blockquote cite="https://explorepartsunknown.com/tokyo/bourdains-field-notes-tokyo/">
+      <p>I love Tokyo. If I had to eat only in one city for the rest of my life, Tokyo would be it. Most chefs I know would agree with me.</p>
+      </blockquote>
       <cite>-- Anthony Bourdain</cite>
-      <h3>For Ramen: Fuunji</h3>
-      <img src="media/fuunji.jpg" alt="Fuunji">
-      <h3>For Tonkatsu: Katsukura</h3>
-      <img src="media/katsukura.jpg" alt="Katsukura">
-      <h3>For Udon: Mentsu-Dan</h3>
-      <img src="media/mentsudan.jpg" alt="Mentsu Dan">
-      <h3>For Sushi: Kyubey</h3>
-      <img src="media/kyubey.jpg" alt="Kyubey">
-      <h3>For Sweets: Sadaharu Aoki</h3>
-      <img src="media/sadaharu.jpeg" alt="Sadaharu">
-      <h3>For Yakitori: Hajimeya</h3>
-      <img src="media/hajimeya.jpg" alt="Hajimeya">
-      <h3>For Tempura: Tsunahachi</h3>
-      <img src="media/tempura.jpg" alt="Tsunhachi">
+    </div>
+
+    <div class="food-content">
+
+      <div class="food-item">
+        <h3>For Ramen:</h3>
+        <h2>Fuunji</h2>
+        <img src="media/fuunji.jpg" alt="Fuunji">
+      </div>
+
+
+      <div class="food-item">
+        <h3>For Tonkatsu:</h3>
+        <h2>Katsukura</h2>
+        <img src="media/katsukura.jpg" alt="Katsukura">
+      </div>
+
+      <div class="food-item">
+        <h3>For Udon:</h3>
+        <h2>Mentsu-Dan</h2>
+        <img src="media/mentsudan.jpg" alt="Mentsu Dan">
+      </div>
+
+      <div class="food-item">
+        <h3>For Sushi:</h3>
+        <h2>Kyubey</h2>
+        <img src="media/kyubey.jpg" alt="Kyubey">
+      </div>
+
+      <div class="food-item">
+        <h3>For Sweets:</h3>
+        <h2>Sadaharu Aoki</h2>
+        <img src="media/sadaharu.jpeg" alt="Sadaharu">
+      </div>
+
+      <div class="food-item">
+        <h3>For Yakitori:</h3>
+        <h2>Hajimeya</h2>
+        <img src="media/hajimeya.jpg" alt="Hajimeya">
+      </div>
+
+      <div class="food-item">
+        <h3>For Tempura:</h3>
+        <h2>Tsunahachi</h2>
+        <img src="media/tempura.jpg" alt="Tsunhachi">
+      </div>
+    </div>
     </main>
 
     <footer>
