reformat credits, adjusted food layout + @media query for quote

--- a/credits.html
+++ b/credits.html
@@ -75,47 +75,63 @@
         </video>
       </div>
       <div class="credits-table">
-        <h2>Credits</h2>
+        <h2>Credits & References</h2>
         <table>
           <tr>
             <th>Resource</th>
-            <th>Author</th>
             <th>Link</th>
           </tr>
           <tr>
             <th>Shinjuku Information</th>
-            <th>Wikipedia</th>
-            <th>https://en.wikipedia.org/wiki/Shinjuku</th>
+            <th><a href="https://en.wikipedia.org/wiki/Shinjuku" target="_blank"> Wikipedia </a></th>
+          </tr>
+          <tr>
+            <th>Favicon</th>
+            <th><a href="https://pixels.com/featured/emblem-of-shinjuku-a-z.html" target="_blank"> Pixels </a></th>
+          </tr>
+          <tr>
+            <th>Background Japan Video</th>
+            <th><a href="https://pixabay.com/videos/lake-sunset-trees-leaves-japan-91562/" target="_blank"> Pixabay </a></th>
           </tr>
           <tr>
             <th></th>
-            <th></th>
-            <th></th>
+            <th><a href="" target="_blank"> </a> </th>
           </tr>
           <tr>
             <th></th>
-            <th></th>
-            <th></th>
+            <th><a href="" target="_blank"> </a> </th>
           </tr>
           <tr>
             <th></th>
-            <th></th>
-            <th></th>
+            <th><a href="" target="_blank"> </a> </th>
           </tr>
           <tr>
             <th></th>
-            <th></th>
-            <th></th>
+            <th><a href="" target="_blank"> </a> </th>
           </tr>
           <tr>
             <th></th>
-            <th></th>
-            <th></th>
+            <th><a href="" target="_blank"> </a> </th>
           </tr>
           <tr>
             <th></th>
+            <th><a href="" target="_blank"> </a> </th>
+          </tr>
+          <tr>
             <th></th>
+            <th><a href="" target="_blank"> </a> </th>
+          </tr>
+          <tr>
             <th></th>
+            <th><a href="" target="_blank"> </a> </th>
+          </tr>
+          <tr>
+            <th></th>
+            <th><a href="" target="_blank"> </a> </th>
+          </tr>
+          <tr>
+            <th></th>
+            <th><a href="" target="_blank"> </a> </th>
           </tr>
         </table>
       </div>
