--- a/food.html
+++ b/food.html
@@ -69,7 +69,7 @@
           Your browser does not support the video tag.
         </video>
       </div>
-    <div class="quote" style="background-image: url('media/bourdain.jpeg'); background-size: cover; background-position: center; color: white; padding: 20px;">
+    <div class="quote" >
       <blockquote cite="https://explorepartsunknown.com/tokyo/bourdains-field-notes-tokyo/">
       <p>I love Tokyo. If I had to eat only in one city for the rest of my life, Tokyo would be it. Most chefs I know would agree with me.</p>
       </blockquote>
@@ -77,13 +77,11 @@
     </div>
 
     <div class="food-content">
-
-      <div class="food-item">
-        <h3>For Ramen:</h3>
-        <h2>Fuunji</h2>
-        <img src="media/fuunji.jpg" alt="Fuunji">
-      </div>
-
+        <div class="food-item">
+          <h3>For Ramen:</h3>
+          <h2>Fuunji</h2>
+          <img src="media/fuunji.jpg" alt="Fuunji">
+        </div>
 
       <div class="food-item">
         <h3>For Tonkatsu:</h3>
