Replaced images with Pixabay royalty free

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
       <div class="about-content">
         <img
           id="shinHistory"
-          src="media/shinjuku-history.jpeg"
+          src="media/shinjuku-history.jpg"
           alt="shinjuku history"
         />
         <div class="history">
