--- a/attractions.html
+++ b/attractions.html
@@ -95,7 +95,7 @@
 
         <a href="#" class="popup-btn" data-popup="popup3"
           ><h3>Robot Restaurant</h3>
-          <img src="media/robot.jpeg" alt="Robot Restaurant" class="roboImg" />
+          <img src="media/robot.jpg" alt="Robot Restaurant" class="roboImg" />
         </a>
 
         <a href="#" class="popup-btn" data-popup="popup4"
