--- a/credits.html
+++ b/credits.html
@@ -79,7 +79,7 @@
         <table>
           <tr>
             <th>Resource</th>
-            <th>Link</th>
+            <th>Source Link</th>
           </tr>
           <tr>
             <th>Shinjuku Information</th>
@@ -94,45 +94,66 @@
             <th><a href="https://pixabay.com/videos/lake-sunset-trees-leaves-japan-91562/" target="_blank"> Pixabay </a></th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Shinjuku History Image</th>
+            <th><a href="https://pixabay.com/photos/street-japanese-kimonos-friends-5429879/" target="_blank"> Pixabay </a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Geography Image</th>
+            <th><a href="https://pixabay.com/photos/railway-train-station-train-7860168/"> Pixabay </a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Transportation Image</th>
+            <th><a href="https://pixabay.com/photos/railway-train-station-train-7860168/" target="_blank">Pixabay</a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Kabukicho Image</th>
+            <th><a href="https://pixabay.com/photos/shinjuku-kabukicho-japan-tokyo-2283158/" target="_blank">Pixabay</a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Robot Restaurant Image</th>
+            <th><a href="https://pixabay.com/photos/japan-asia-neon-streetm-city-4141581/" target="_blank">Pixabay</a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Golden Gai Image</th>
+            <th><a href="https://pixabay.com/photos/tokyo-street-alone-person-walk-5772124/" target="_blank">Pixabay</a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Anthony Bourdain Quote Image</th>
+            <th><a href="https://pixabay.com/photos/tokyo-street-alone-person-walk-5772124/" target="_blank">Pixabay</a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Fuunji Image</th>
+            <th><a href="https://pixabay.com/photos/ramen-soup-food-asian-pasta-lunch-7238669/" target="_blank">Pixabay</a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Katsukura Image</th>
+            <th><a href="https://pixabay.com/photos/restaurant-cooking-japanese-meal-1690696/" target="_blank">Pixabay</a> </th>
           </tr>
           <tr>
-            <th></th>
-            <th><a href="" target="_blank"> </a> </th>
+            <th>Mentsu-Dan Image</th>
+            <th><a href="https://pixabay.com/photos/food-hokkaido-japan-no-studio-5390795/" target="_blank">Pixabay</a> </th>
           </tr>
+          <tr>
+            <th>Kyubey Image</th>
+            <th><a href="https://pixabay.com/photos/sushi-roll-images-sushi-rolls-sushi-4395598/" target="_blank">Pixabay</a> </th>
+          </tr>
+          <tr>
+            <th>Sadaharu Aoki Image</th>
+            <th><a href="https://pixabay.com/photos/cake-breakfast-dessert-sweet-ball-2610754/" target="_blank">Pixabay</a> </th>
+          </tr>
+          <tr>
+            <th>Hajimeya Image</th>
+            <th><a href="https://pixabay.com/photos/chiangmai-market-night-thailand-5308180/" target="_blank">Pixabay</a> </th>
+          </tr>
+          <tr>
+            <th>Tsunahachi Image</th>
+            <th><a href="https://pixabay.com/photos/shrimp-tempura-shrimp-fry-cooking-4665687/" target="_blank">Pixabay</a> </th>
+          </tr>
+          <tr>
+            <th>Gyoen Image</th>
+            <th><a href="https://pixabay.com/photos/tokyo-park-nature-japan-asia-2805500/" target="_blank">Pixabay</a> </th>
+          </tr>
+          
         </table>
       </div>
       <br />
