--- a/food.html
+++ b/food.html
@@ -104,7 +104,7 @@
       <div class="food-item">
         <h3>For Sweets:</h3>
         <h2>Sadaharu Aoki</h2>
-        <img src="media/sadaharu.jpeg" alt="Sadaharu">
+        <img src="media/sadaharu.jpg" alt="Sadaharu">
       </div>
 
       <div class="food-item">
